--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "w": "babel --watch src --out-dir  dist"
+    "dev": "babel --watch src --out-dir  dist",
+    "lint": "eslint src/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^9.0.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^5.6.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0"
   }
 }
