--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^9.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^5.6.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "axios": "^0.18.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
