--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "",
     "build": "babel src --out-dir dist",
-    "dev": "babel --watch src --out-dir  dist",
+    "dev": "babel --watch src --out-dir  dist & node www.js",
     "lint": "eslint src/"
   },
   "author": "",
@@ -22,6 +23,9 @@
     "axios": "^0.18.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "compression": "^1.7.3",
+    "express": "^4.16.4",
+    "opn": "^5.4.0"
   }
 }
