--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
   "scripts": {
     "start": "",
     "build": "babel src --out-dir dist",
-    "dev": "babel --watch src --out-dir  dist & node www.js",
+    "dev": "webpack-dev-server  --mode development --devtool inline-source-map --hot",
     "lint": "eslint src/"
   },
-  "author": "",
+  "author": "leinov",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^9.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^5.6.0"
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
+    "eslint": "^5.6.0",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-stage-0": "^6.24.1",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "opn": "^5.4.0"
