--- a/package.json
+++ b/package.json
@@ -22,11 +22,23 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "compression": "^1.7.3",
     "express": "^4.16.4",
     "nodemon": "^2.0.4",
     "opn": "^5.4.0"
+  },
+  "babel": {
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ]
   }
 }
